<resources>
    <string name="app_name">BoaViagem</string>
    <string name="opcoes">Opções</string>
    <string name="sim">Sim</string>
    <string name="nao">Não</string>
    <string name="error_campo_obrigatorio">Campo obrigatório!</string>

    <!-- Activity Main -->
    <string name="textViewUsuario">Usuário:</string>
    <string name="textViewSenha">Senha:</string>
    <string name="buttonLogin">Login</string>
    <string name="erro_autenticacao">Usuário ou senha inválidos!</string>
    <string name="manter_conectado">Manter conectado?</string>

    <!-- Activity Dashboard -->
    <string name="textViewNovoGasto">Novo Gasto</string>
    <string name="textViewNovaViagem">Nova Viagem</string>
    <string name="textViewMinhasViagens">Minhas Viagens</string>
    <string name="textViewConfiguracoes">Configurações</string>
    <string name="menuSair">Sair</string>

    <!-- Activity NovaViagem -->
    <string name="textViewDestino">Destino</string>
    <string name="textViewTipoDaViagem">Tipo da Viagem</string>
    <string name="radioButtonLazer">Lazer</string>
    <string name="radioButtonNegocios">Negócios</string>
    <string name="textViewDataDaChegada">Data da Chegada</string>
    <string name="textViewDataDaSaida">Data da Saída</string>
    <string name="selecione">Selecione</string>
    <string name="orcamento">Orçamento</string>
    <string name="textViewQuantidadeDePessoas">Quantidade de Pessoas</string>
    <string name="buttonSalvar">Salvar</string>
    <string name="registro_salvo">Registro salvo com sucesso!</string>
    <string name="erro_salvar">Erro ao salvar viagem</string>

    <!-- Activity NovoGasto -->
    <string name="textViewValor">Valor</string>
    <string name="textViewData">Data</string>
    <string name="textViewDescricao">Descrição</string>
    <string name="textViewLocal">Local</string>
    <string name="categoria">Categoria</string>
    <string name="buttonGastei">Gastei!</string>

    <!-- Activity ViagemList -->
    <string name="menuExcluirViagem">Excluir Viagem</string>
    <string name="menuNovoGasto">Novo Gasto</string>
    <string name="menuEditarViagem">Editar Viagem</string>
    <string name="menuGastosRealizados">Gastos Realizados</string>
    <string name="menuConfirmaExclusaoViagem">Deseja realmente remover a viagem?</string>

    <!-- Activity GastoList -->
    <string name="menuExcluirGasto">Excluir Gasto</string>

    <!-- Activity Configuracoes -->
    <string name="preferencias">Preferências</string>
    <string name="modo_viagem">Modo Viagem</string>
    <string name="modo_viagem_sumario">Determina a viagem ativa com base na data atual</string>
    <string name="informe_valor_limite">Informe o valor limite (em %)</string>
    <string name="valor_limite">Alerta de gastos</string>
    <string name="valor_limite_sumario">Notifica quando os gastos ultrapassarem o percentual informado</string>

    <string-array name="categoria_gasto">
        <item>Alimentação</item>
        <item>Combustível</item>
        <item>Transporte</item>
        <item>Hospedagem</item>
        <item>Outros</item>
    </string-array>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
</resources>
