<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NovoGastoActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:background="#015488"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/textViewNovoGasto"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/destino"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textStyle="bold"/>
        </LinearLayout>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="0,1">

            <TableRow>
                <TextView android:text="@string/textViewValor"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/textViewData"/>
            </TableRow>

            <TableRow>
                <EditText
                    android:id="@+id/editTextValor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLength="20"
                    android:inputType="numberDecimal"/>

                <Button
                    android:id="@+id/buttonData"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:onClick="selecionarData"
                    android:text="@string/selecione"/>
            </TableRow>

        </TableLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textViewDescricao"/>

        <EditText
            android:id="@+id/editTextDescricao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textViewLocal"/>

        <EditText
            android:id="@+id/editTextLocal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/categoria"/>

        <Spinner
            android:id="@+id/spinnerCategoria"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:prompt="@string/categoria">
        </Spinner>



        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="salvarGasto"
            android:text="@string/buttonGastei"/>

    </LinearLayout>

</ScrollView>
